# safetool-pdf

./: .gitignore  BUILD_LOCAL.md  LICENSE  README.md  config.py  pyproject.toml  requirements.txt  sions()  test_close.py
.github/workflows/: build.yml  release.yml
dev-tools/: build.py  validate_translations.py
i18n/: __init__.py  core.py
i18n/translations/: en.json  es.json
packaging/ci/: build.yml
packaging/macos/: Info.plist  build_macos.sh
packaging/nuitka/: build.sh
packaging/pyinstaller/: safetool-pdf.spec
packaging/scripts/: download_ghostscript.py
packaging/windows/: build_windows.bat  safetool-pdf.iss
safetool_pdf_cli/: __init__.py  main.py
safetool_pdf_core/: __init__.py  analyzer.py  constants.py  exceptions.py  gs_detect.py  models.py  naming.py  progress.py
safetool_pdf_core/tools/: __init__.py  merge.py  metadata.py  numbering.py  (+2 more)
safetool_pdf_desktop/: __init__.py  app.py  main_window.py  settings.py
tests/: conftest.py  debug_fullapp.py  test_analyzer.py  test_analyzer_error_handling.py  test_batch.py  test_batch_extended.py  test_cleanup.py  test_cli.py  test_cli_extended.py  test_cli_tools.py  test_download_ghostscript.py  test_e2e.py  test_encrypted_files_ui.py  test_encryption.py  test_ghostscript.py  test_gs_availability.py  test_logging.py  test_lossless.py  test_lossy.py  test_lossy_extended.py  test_models.py  test_naming.py  test_optimizer.py  test_permissions_effective.py  test_preservation.py  test_presets.py  test_signatures.py  test_tool_merge.py  test_tool_metadata.py  test_tool_numbering.py  test_tool_split.py  test_tool_unlock.py  test_ui_extended.py  test_ui_smoke.py  test_unlock_permissions_edge_cases.py  test_unlock_ui_no_password.py  test_verifier.py
(+53 files in other folders)
